# smart_scraper

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  index.rst  readme.rst
smart_scraper/: __init__.py
smart_scraper/similarity/: README.md  __init__.py  strategy.py  web_strings.py
tests/: test_smart_scraper.py
