[tool.poetry]
name = "smart_scraper"
version = "0.1.0"
description = ""
authors = ["Georvic Tur <georvic.tur@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
lxml = "^4.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
mypy = "^0.782"
Sphinx = "^3.1.2"
sphinx_rtd_theme = "^0.5.0"
recommonmark = "^0.6.0"
m2r2 = "^0.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
